# MiniEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
demo/shaders/: compile.sh  frag.glsl  vert.glsl
include/miniengine/: app.h
src/: app.cpp  main.cpp
